A little bit changed apperance Tommorrow I'll do a router to manage board and settings view, also settings checker and settings saver

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,1 @@
-<h1>{{title}}</h1>
-
-<ng-template ngIf="{{setting}}"></ng-template>
-<div *ngIf="setting.started == true; else elseBlock">
-  <app-board></app-board>
-</div>
-<ng-template #elseBlock>
-  <app-start></app-start>
-</ng-template>
-
-
+<app-navbar></app-navbar>
