--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -28,7 +28,8 @@
     <!--      <app-board></app-board>-->
     <!--    </div>-->
     <!--    <ng-template #elseBlock>-->
-    <app-start></app-start>
+    <!--    <app-start></app-start>-->
+    <app-board></app-board>
     <!--    </ng-template>-->
 
   </mat-sidenav-content>
