--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -1,7 +1,7 @@
 .board {
   display: grid;
-  grid-template-columns: repeat(10, 10%);
-  grid-template-rows: repeat(10, 10%);
+  grid-template-columns: repeat(10, 100px);
+  grid-template-rows: repeat(10, 100px);
 
   .myCard {
     border: 2px solid red;
