--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,4 +1,4 @@
 <div class="board">
-  <mat-card *ngFor="let ship of ships" class="myCard">
+  <mat-card (click)="mojaFunkcja(ship)" *ngFor="let ship of ships" class="myCard">
   </mat-card>
 </div>
