--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,36 +1,24 @@
 <mat-sidenav-container class="sidenav-container">
-  <!--  <mat-sidenav #drawer class="sidenav" fixedInViewport-->
-  <!--      [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"-->
-  <!--      [mode]="(isHandset$ | async) ? 'over' : 'side'"-->
-  <!--      [opened]="(isHandset$ | async) === false">-->
-  <!--    <mat-toolbar>Menu</mat-toolbar>-->
-  <!--    <mat-nav-list>-->
-  <!--      <a mat-list-item href="#">Link 1</a>-->
-  <!--      <a mat-list-item href="#">Link 2</a>-->
-  <!--      <a mat-list-item href="#">Link 3</a>-->
-  <!--    </mat-nav-list>-->
-  <!--  </mat-sidenav>-->
+  <mat-sidenav #drawer [attr.role]="'navigation'" [mode]="'side'"
+               [opened]="true"
+               class="sidenav"
+               fixedInViewport>
+    <mat-toolbar>Menu</mat-toolbar>
+    <mat-nav-list>
+      <a mat-list-item routerLink="/board">
+        <mat-icon>play_circle_filled</mat-icon>
+      </a>
+      <a mat-list-item routerLink="/">
+        <mat-icon>settings_applications</mat-icon>
+      </a>
+    </mat-nav-list>
+  </mat-sidenav>
   <mat-sidenav-content>
     <mat-toolbar color="primary">
-      <!--      <button-->
-      <!--        type="button"-->
-      <!--        aria-label="Toggle sidenav"-->
-      <!--        mat-icon-button-->
-      <!--        (click)="drawer.toggle()"-->
-      <!--        *ngIf="isHandset$ | async">-->
-      <!--        <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>-->
-      <!--      </button>-->
       <span>{{title | titlecase}}</span>
     </mat-toolbar>
 
-    <!--    <ng-template ngIf="{{setting}}"></ng-template>-->
-    <!--    <div *ngIf="setting.started == true; else elseBlock">-->
-    <!--      <app-board></app-board>-->
-    <!--    </div>-->
-    <!--    <ng-template #elseBlock>-->
-    <!--    <app-start></app-start>-->
-    <app-board></app-board>
-    <!--    </ng-template>-->
+    <router-outlet></router-outlet>
 
   </mat-sidenav-content>
 </mat-sidenav-container>
