Routing with messages added

--- a/src/app/start/start.component.html
+++ b/src/app/start/start.component.html
@@ -1,7 +1,7 @@
 <form (ngSubmit)="onSubmit()" [formGroup]="settingsForm" class="settings-form" novalidate>
 
   <mat-form-field class="settings-row">
-    <input formControlName="size" matInput max="50" min="0" placeholder="Map Height" type="number"/>
+    <input formControlName="size" matInput max="50" min="0" placeholder="Map size" type="number"/>
   </mat-form-field>
 
   <mat-form-field class="settings-row">
