--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,14 +1,13 @@
 <mat-sidenav-container class="sidenav-container">
-  <mat-sidenav #drawer [attr.role]="'navigation'" [mode]="'side'"
+  <mat-sidenav [attr.role]="'navigation'" [mode]="'side'"
                [opened]="true"
                class="sidenav"
                fixedInViewport>
-    <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
       <a mat-list-item routerLink="/board">
         <mat-icon>play_circle_filled</mat-icon>
       </a>
-      <a mat-list-item routerLink="/">
+      <a class="settings" mat-list-item routerLink="/">
         <mat-icon>settings_applications</mat-icon>
       </a>
     </mat-nav-list>
