--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -1,8 +1,16 @@
-<div [style.grid-template-columns]="'repeat(' + map.size + ',100px'"
-     [style.grid-template-rows]="'repeat(' + map.size + ',100px'"
-     class="board">
+<div
+  [ngStyle]="{'grid-template-columns': 'repeat(' + board.size + ',100px', 'grid-template-rows': 'repeat(' + board.size + ',100px'}"
+  class="board">
 
-  //tu jest error, trzeba ogarnac robienie planszy, kazdego pola z osobna, a nie tylko statow
-  <mat-card (click)="shoot(ship)" *ngFor="let ship of ships" class="myCard"></mat-card>
+  <mat-card (click)="shoot(field)" *ngFor="let field of board.fields" [class.isShipShot]="field.isShot && field.hasShip"
+            [class.isShot]="field.isShot" class="myCard"></mat-card>
 
+</div>
+
+<div class="stats">
+  <mat-list>
+    Stats:
+    <mat-list-item>Shots fired = {{board.shoots}}</mat-list-item>
+    <mat-list-item>Shots missed = {{board.missed}}</mat-list-item>
+  </mat-list>
 </div>
