--- a/src/app/board/board.component.scss
+++ b/src/app/board/board.component.scss
@@ -2,8 +2,25 @@
   display: grid;
   grid-template-columns: repeat(10, 100px);
   grid-template-rows: repeat(10, 100px);
+  margin-left: 5px;
+  margin-top: 5px;
 
   .myCard {
-    border: 2px solid red;
+    border: 1px solid white;
   }
+
+  .isShot {
+    background-color: lightgray;
+  }
+
+  .isShipShot {
+    background-color: red;
+  }
+
+}
+
+.stats {
+  position: fixed;
+  top: 10%;
+  right: 0;
 }
