--- a/src/app/start/start.component.html
+++ b/src/app/start/start.component.html
@@ -25,7 +25,7 @@
   </mat-form-field>
 
   <div>
-    <mat-checkbox formControlName="autoDeployment" labelPosition="before">Automatic deployment?</mat-checkbox>
+    <mat-checkbox disabled formControlName="autoDeployment" labelPosition="before">Automatic deployment?</mat-checkbox>
   </div>
 
   <div>
