--- a/src/app/board/board.component.html
+++ b/src/app/board/board.component.html
@@ -10,7 +10,7 @@
 <div class="stats">
   <mat-list>
     Stats:
-    <mat-list-item>Shots fired = {{board.shoots}}</mat-list-item>
-    <mat-list-item>Shots missed = {{board.missed}}</mat-list-item>
+    <mat-list-item>Shots fired = {{stats.fired}}</mat-list-item>
+    <mat-list-item>Shots missed = {{stats.missed}}</mat-list-item>
   </mat-list>
 </div>
